samples/_failures_safe/1761461217_234212_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61f53576.c: In function ‘main’:
./samples/SAFE/__tmp_61f53576.c:135:5: error: expected expression at end of input
  135 |     print_buffer(&
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_61f53576.c:135:5: error: expected declaration or statement at end of input
